# agentic_rag-

./: .env.example  .gitignore  README.md  pyproject.toml
backend/api/: main.py  models.py
backend/api/routes/: chat.py  documents.py
backend/db/: __init__.py  connection.py
backend/db/models/: __init__.py  base.py  document.py  memory.py  user.py
backend/db/repositories/: __init__.py  base.py  memory_repo.py  user_repo.py
backend/db/services/: __init__.py  memory_service.py  user_service.py
backend/milvus/: client.py
backend/src/: agent.py  document_loaders.py  document_processor.py  embeddings.py  rag_graph.py  redis_cache.py  sparse_embeddings.py  text_splitter.py
docker/: docker-compose.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx
frontend/src/api/: client.ts  index.ts
frontend/src/components/: Button.tsx  Card.tsx  Input.tsx  MessageBubble.tsx  SessionItem.tsx  StatCard.tsx  index.ts
frontend/src/components/Layout/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: ChatPage.tsx  DocumentsPage.tsx  HistoryPage.tsx  index.ts
frontend/src/styles/: index.css
frontend/src/types/: index.ts
frontend/src/utils/: helpers.ts
scripts/: clear_milvus.py  ingest.py  recreate_collection.py  run_api.py
